Replace raw foreign key value in date_nights with primary descriptors

--- a/app/views/date_nights/index.html.erb
+++ b/app/views/date_nights/index.html.erb
@@ -22,7 +22,7 @@
         <td><%= date_night.user.email %></td>
         <td><%= date_night.date.email %></td>
         <td><%= date_night.restaurant.created_at %></td>
-        <td><%= date_night.activity_id %></td>
+        <td><%= date_night.activity.name %></td>
         <td><%= date_night.day %></td>
         <td>
           <a href="/date_nights/<%= date_night.id %>" class="btn btn-primary">Show</a>
