--- a/app/views/date_nights/index.html.erb
+++ b/app/views/date_nights/index.html.erb
@@ -21,7 +21,7 @@
       <tr>
         <td><%= date_night.user.email %></td>
         <td><%= date_night.date.email %></td>
-        <td><%= date_night.restaurant_id %></td>
+        <td><%= date_night.restaurant.created_at %></td>
         <td><%= date_night.activity_id %></td>
         <td><%= date_night.day %></td>
         <td>
