--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -19,7 +19,7 @@
       <tr>
         <td><%= restaurant.location %></td>
         <td><%= restaurant.name %></td>
-        <td><%= restaurant.contributor_id %></td>
+        <td><%= restaurant.contributor.email %></td>
         <td>
           <a href="/restaurants/<%= restaurant.id %>" class="btn btn-primary">Show</a>
           <a href="/restaurants/<%= restaurant.id %>/edit" class="btn btn-warning">Edit</a>
