--- a/app/views/activities/edit.html.erb
+++ b/app/views/activities/edit.html.erb
@@ -42,7 +42,7 @@
           Contributor
         </label>
 
-        <input type="text" id="contributor_id" name="contributor_id" placeholder="Contributor" class="form-control" value="<%= @activity.contributor_id %>">
+        <%= select_tag(:contributor_id, options_from_collection_for_select(User.all, :id, :email, @activity.contributor_id), :class => "form-control") %>
       </div>
 
       <button class="btn btn-warning">
