Replace raw foreign key value in date_nights with primary descriptors

--- a/app/views/date_nights/index.html.erb
+++ b/app/views/date_nights/index.html.erb
@@ -20,7 +20,7 @@
       <% @date_nights.each do |date_night| %>
       <tr>
         <td><%= date_night.user.email %></td>
-        <td><%= date_night.date_id %></td>
+        <td><%= date_night.date.email %></td>
         <td><%= date_night.restaurant_id %></td>
         <td><%= date_night.activity_id %></td>
         <td><%= date_night.day %></td>
