--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -22,8 +22,11 @@
         <td><%= activity.contributor.email %></td>
         <td>
           <a href="/activities/<%= activity.id %>" class="btn btn-primary">Show</a>
-          <a href="/activities/<%= activity.id %>/edit" class="btn btn-warning">Edit</a>
-          <a href="/delete_activity/<%= activity.id %>" class="btn btn-danger" rel="nofollow">Delete</a>
+          
+          <% if current_user == activity.contributor %>
+            <a href="/activities/<%= activity.id %>/edit" class="btn btn-warning">Edit</a>
+            <a href="/delete_activity/<%= activity.id %>" class="btn btn-danger" rel="nofollow">Delete</a>
+          <% end %>
         </td>
       </tr>
       <% end %>
