--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -59,6 +59,50 @@
           </div>
         </li>
       <% end %>
+
+      <li class="list-group-item">
+        <form action="/create_date_night" method="post">
+      <!-- Hidden input for authenticity token to protect from forgery -->
+      <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+
+      <!-- Label and input for user_id -->
+      <input type="hidden" name="user_id" value="<%= current_user.id %>">
+
+      <!-- Label and input for date_id -->
+      <div class="form-group">
+        <label for="date_id" class="control-label">
+          Date
+        </label>
+
+        <%= select_tag(:date_id, options_from_collection_for_select(User.all, :id, :email), :class => "form-control") %>
+      </div>
+
+      <!-- Label and input for restaurant_id -->
+      <div class="form-group">
+        <label for="restaurant_id" class="control-label">
+          Restaurant
+        </label>
+
+        <%= select_tag(:restaurant_id, options_from_collection_for_select(Restaurant.all, :id, :created_at), :class => "form-control") %>
+      </div>
+
+      <!-- Label and input for activity_id -->
+      <input type="hidden" name="activity_id" value="<%= @activity.id %>">
+
+      <!-- Label and input for day -->
+      <div class="form-group">
+        <label for="day" class="control-label">
+          Day
+        </label>
+
+        <input type="text" id="day" name="day" placeholder="Day" class="form-control" value="">
+      </div>
+
+      <button class="btn btn-block btn-success">
+        Create Date Night
+      </button>
+    </form>
+      </li>
     </ul>
   </div>
 </div>
