--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -9,7 +9,11 @@
       <dd><%= @activity.name %></dd>
 
       <dt>Location</dt>
-      <dd><%= @activity.location %></dd>
+      <dd>
+        <div>
+          <div id="location_map" style="height: 480px;"></div>
+        </div>
+      </dd>
 
       <dt>Contributor</dt>
       <dd><%= @activity.contributor_id %></dd>
@@ -106,3 +110,21 @@
     </ul>
   </div>
 </div>
+
+
+<script src="//maps.google.com/maps/api/js?v=3.24&key=AIzaSyCOTPWiuvyyo6sKoIBzKA4-1ol-vTOIOlM"></script>
+<script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
+<script>
+  handler = Gmaps.build('Google');
+  handler.buildMap({ provider: {}, internal: {id: 'location_map'}}, function(){
+    markers = handler.addMarkers([
+      {
+        "lat": <%= @activity.location_latitude %>,
+        "lng": <%= @activity.location_longitude %>,
+        "infowindow": "<h5><%= @activity.created_at %></h5><small><%= @activity.location_formatted_address %></small>"
+      }
+    ]);
+    handler.bounds.extendWith(markers);
+    handler.fitMapToBounds();
+  });
+</script>
