--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -16,7 +16,13 @@
       </dd>
 
       <dt>Contributor</dt>
-      <dd><%= @activity.contributor_id %></dd>
+      <dd>
+        <% if @activity.contributor.present? %>
+          <a href="/users/<%= @activity.contributor_id %>">
+            <%= @activity.contributor.email %>
+          </a>
+        <% end %>
+      </dd>
 
     </dl>
 
