--- a/app/views/date_nights/edit.html.erb
+++ b/app/views/date_nights/edit.html.erb
@@ -55,6 +55,9 @@
         </label>
 
         <input type="text" id="day" name="day" placeholder="Day" class="form-control" value="<%= @date_night.day %>">
+        <span class="input-group-addon">
+            <span class="glyphicon glyphicon-calendar"></span>
+        </span>
       </div>
 
       <button class="btn btn-warning">
