--- a/app/views/date_nights/edit.html.erb
+++ b/app/views/date_nights/edit.html.erb
@@ -53,12 +53,19 @@
         <label for="day" class="control-label">
           Day
         </label>
-
-        <input type="text" id="day" name="day" placeholder="Day" class="form-control" value="<%= @date_night.day %>">
-        <span class="input-group-addon">
-            <span class="glyphicon glyphicon-calendar"></span>
-        </span>
+        <div class='input-group date' id='dayPicker'>
+        <input type="hidden" id="day" name="day" placeholder="Day" class="form-control" value="<%= @date_night.day %>">
       </div>
+      </div>
+      <script type="text/javascript">
+        $(function () {
+          $('#dayPicker').datetimepicker({
+            inline: true,
+            sideBySide: true,
+            defaultDate: "<%= @date_night.day %>"
+          });
+        });
+      </script>
 
       <button class="btn btn-warning">
         Update Date Night
