--- a/app/views/date_nights/edit.html.erb
+++ b/app/views/date_nights/edit.html.erb
@@ -19,7 +19,8 @@
       <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
 
 
-
+      <!-- Label and input for user_id -->
+      <input type="hidden" name="user_id" value="<%= @date_night.user_id %>">
 
       <!-- Label and input for date_id -->
       <div class="form-group">
