--- a/app/views/date_nights/index.html.erb
+++ b/app/views/date_nights/index.html.erb
@@ -9,11 +9,11 @@
   <div class="col-md-12">
     <table class="table table-striped table-hover">
       <tr>
-        <th>User</th>
+        <th>Invite From</th>
         <th>Date</th>
-        <th>Restaurant</th>
+        <th>Food</th>
         <th>Activity</th>
-        <th>Day</th>
+        <th>When</th>
         <th>Actions</th>
       </tr>
 
@@ -51,7 +51,7 @@
         <td>
           <a href="/date_nights/<%= date_night.id %>" class="btn btn-primary">Show</a>
 
-          <% if current_user == date_night.user %>
+          <% if current_user == date_night.user || date_night.date %>
             <a href="/date_nights/<%= date_night.id %>/edit" class="btn btn-warning">Edit</a>
             <a href="/delete_date_night/<%= date_night.id %>" class="btn btn-danger" rel="nofollow">Delete</a>
           <% end %>
