only dates and inviters can see datenights

--- a/app/views/date_nights/index.html.erb
+++ b/app/views/date_nights/index.html.erb
@@ -18,33 +18,34 @@
       </tr>
 
       <% @date_nights.each do |date_night| %>
+      <% if date_night.user == current_user || date_night.date == current_user %>
       <tr>
         <td>
           <% if date_night.user.present? %>
-            <a href="/users/<%= date_night.user.id %>">
-              <%= date_night.user.username %>
-            </a>
+          <a href="/users/<%= date_night.user.id %>">
+            <%= date_night.user.username %>
+          </a>
           <% end %>
         </td>
         <td>
           <% if date_night.date.present? %>
-            <a href="/users/<%= date_night.date.id %>">
-              <%= date_night.date.username %>
-            </a>
+          <a href="/users/<%= date_night.date.id %>">
+            <%= date_night.date.username %>
+          </a>
           <% end %>
         </td>
         <td>
           <% if date_night.restaurant.present? %>
-            <a href="/restaurants/<%= date_night.restaurant.id %>">
-              <%= date_night.restaurant.name %>
-            </a>
+          <a href="/restaurants/<%= date_night.restaurant.id %>">
+            <%= date_night.restaurant.name %>
+          </a>
           <% end %>
         </td>
         <td>
           <% if date_night.activity.present? %>
-            <a href="/activities/<%= date_night.activity.id %>">
-              <%= date_night.activity.name %>
-            </a>
+          <a href="/activities/<%= date_night.activity.id %>">
+            <%= date_night.activity.name %>
+          </a>
           <% end %>
         </td>
         <td><%= date_night.day %></td>
@@ -52,11 +53,12 @@
           <a href="/date_nights/<%= date_night.id %>" class="btn btn-primary">Show</a>
 
           <% if current_user == date_night.user || date_night.date %>
-            <a href="/date_nights/<%= date_night.id %>/edit" class="btn btn-warning">Edit</a>
-            <a href="/delete_date_night/<%= date_night.id %>" class="btn btn-danger" rel="nofollow">Delete</a>
+          <a href="/date_nights/<%= date_night.id %>/edit" class="btn btn-warning">Edit</a>
+          <a href="/delete_date_night/<%= date_night.id %>" class="btn btn-danger" rel="nofollow">Delete</a>
           <% end %>
         </td>
       </tr>
+      <% end %>
       <% end %>
     </table>
     <%= paginate @date_nights, theme: 'twitter-bootstrap-4' %>
