--- a/app/views/date_nights/index.html.erb
+++ b/app/views/date_nights/index.html.erb
@@ -1,8 +1,16 @@
 <div class="page-header">
-  <h1>
-    Date nights
-    <a href="/date_nights/new" class="btn btn-lg btn-success">New Date night</a>
-  </h1>
+  <div class="page-header">
+
+    <div class="row">
+      <div class="col-md-4 col-md-offset-4">
+        <a href="/date_nights/new" class="btn btn-default btn-block"><i class="fa fa-calendar-plus-o" aria-hidden="true"></i></a>
+      </div>
+    </div>
+  </div>
+    <h1>
+      Date Nights
+    </h1>
+
 </div>
 
 <div class="row">
@@ -50,11 +58,11 @@
         </td>
         <td><%= date_night.day %></td>
         <td>
-          <a href="/date_nights/<%= date_night.id %>" class="btn btn-primary">Show</a>
+          <a href="/date_nights/<%= date_night.id %>" class="btn btn-default"><i class="fa fa-eye" aria-hidden="true"></i></a>
 
           <% if current_user == date_night.user || date_night.date %>
-          <a href="/date_nights/<%= date_night.id %>/edit" class="btn btn-warning">Edit</a>
-          <a href="/delete_date_night/<%= date_night.id %>" class="btn btn-danger" rel="nofollow">Delete</a>
+          <a href="/date_nights/<%= date_night.id %>/edit" class="btn btn-default"><i class="fa fa-pencil" aria-hidden="true"></i></a>
+          <a href="/delete_date_night/<%= date_night.id %>" class="btn btn-default" rel="nofollow"><i class="fa fa-trash" aria-hidden="true"></i></a>
           <% end %>
         </td>
       </tr>
