--- a/app/views/date_nights/index.html.erb
+++ b/app/views/date_nights/index.html.erb
@@ -3,7 +3,7 @@
 
     <div class="row">
       <div class="col-md-4 col-md-offset-4">
-        <a href="/date_nights/new" class="btn btn-default btn-block"><i class="fa fa-calendar-plus-o" aria-hidden="true"></i></a>
+        <a href="/date_nights/new" class="btn btn-default btn-block"><i class="fa fa-calendar-plus-o" aria-hidden="true"></i> New Date</a>
       </div>
     </div>
   </div>
@@ -56,7 +56,7 @@
           </a>
           <% end %>
         </td>
-        <td><%= date_night.day %></td>
+        <td><%= date_night.day.to_formatted_s(:long) %></td>
         <td>
           <a href="/date_nights/<%= date_night.id %>" class="btn btn-default"><i class="fa fa-eye" aria-hidden="true"></i></a>
 
