--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,34 +41,34 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><a href="/date_nights">Date Nights</a></li>
-          <li><a href="/activities">Activities</a></li>
-          <li><a href="/restaurants">Restaurants</a></li>
+          <li><a href="/date_nights"><i class="fa fa-calendar" aria-hidden="true"></i> Date Nights</a></li>
+          <li><a href="/activities"><i class="fa fa-exclamation" aria-hidden="true"></i> Activities</a></li>
+          <li><a href="/restaurants"><i class="fa fa-cutlery" aria-hidden="true"></i> Restaurants</a></li>
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
           <% if current_user.present? %>
             <li>
               <a href="/users/edit">
-                <%= current_user.username %>
+                <i class="fa fa-user" aria-hidden="true"></i> <%= current_user.username %>
               </a>
             </li>
 
             <li>
               <a href="/users/sign_out" data-method="delete" rel="nofollow">
-                Sign Out
+                <i class="fa fa-sign-out" aria-hidden="true"></i> Sign Out
               </a>
             </li>
           <% else %>
             <li>
               <a href="/users/sign_up">
-                Sign Up
+                <i class="fa fa-user-plus" aria-hidden="true"></i> Sign Up
               </a>
             </li>
 
             <li>
               <a href="/users/sign_in">
-                Sign In
+                <i class="fa fa-sign-in" aria-hidden="true"></i> Sign In
               </a>
             </li>
           <% end %>
