--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><a href="/date_nights"><i class="fa fa-calendar" aria-hidden="true"></i> Date Nights</a></li>
+          <li><a href="/date_nights"><i class="fa fa-calendar" aria-hidden="true"></i> Plans</a></li>
           <li><a href="/activities"><i class="fa fa-exclamation" aria-hidden="true"></i> Activities</a></li>
           <li><a href="/restaurants"><i class="fa fa-cutlery" aria-hidden="true"></i> Restaurants</a></li>
         </ul>
