--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -15,28 +15,21 @@
         </div>
       </dd>
 
-      <dt>Contributor</dt>
-      <dd>
-        <% if @activity.contributor.present? %>
-          <a href="/users/<%= @activity.contributor_id %>">
-            <%= @activity.contributor.email %>
-          </a>
-        <% end %>
-      </dd>
+
 
     </dl>
 
     <div class="btn-group btn-group-justified">
-      <a href="/activities" class="btn btn-primary">
-        Back
+      <a href="/activities" class="btn btn-default">
+        <i class="fa fa-undo" aria-hidden="true"></i>
       </a>
       <% if current_user == @activity.contributor %>
-        <a href="/activities/<%= @activity.id %>/edit" class="btn btn-warning">
-          Edit
-        </a>
-        <a href="/delete_activity/<%= @activity.id %>" class="btn btn-danger" rel="nofollow">
-          Delete
-        </a>
+      <a href="/activities/<%= @activity.id %>/edit" class="btn btn-default">
+        <i class="fa fa-pencil" aria-hidden="true"></i>
+      </a>
+      <a href="/delete_activity/<%= @activity.id %>" class="btn btn-default" rel="nofollow">
+        <i class="fa fa-trash" aria-hidden="true"></i>
+      </a>
       <% end %>
     </div>
   </div>
@@ -48,89 +41,104 @@
   <div class="col-md-12">
     <ul class="list-group">
       <li class="list-group-item list-group-item-info">
-        Date Nights
+        Your Dates Here
       </li>
 
       <% @activity.date_nights.each do |date_night| %>
-        <li class="list-group-item">
-          <a href="/date_nights/<%= date_night.id %>">
-            <%= date_night.user_id %>
+      <% if current_user == date_night.user || date_night.date %>
+      <li class="list-group-item">
+        <a href="/date_nights/<%= date_night.id %>">
+          <%= date_night.day.to_formatted_s(:short) %>
+        </a>
+        <div class="btn-group btn-group-xs pull-right">
+          <a href="/date_nights/<%= date_night.id %>" class="btn btn-default">
+            <i class="fa fa-eye"></i>
           </a>
-          <div class="btn-group btn-group-xs pull-right">
-            <a href="/date_nights/<%= date_night.id %>" class="btn btn-primary">
-              <i class="fa fa-search-plus"></i>
-            </a>
-            <a href="/date_nights/<%= date_night.id %>/edit" class="btn btn-warning">
-              <i class="fa fa-edit"></i>
-            </a>
-            <a href="/delete_date_night/<%= date_night.id %>" class="btn btn-danger" rel="nofollow">
-              <i class="fa fa-trash-o"></i>
-            </a>
-          </div>
-        </li>
+          <a href="/date_nights/<%= date_night.id %>/edit" class="btn btn-default">
+            <i class="fa fa-pencil"></i>
+          </a>
+          <a href="/delete_date_night/<%= date_night.id %>" class="btn btn-default" rel="nofollow">
+            <i class="fa fa-trash-o"></i>
+          </a>
+        </div>
+      </li>
+      <% end %>
       <% end %>
 
       <li class="list-group-item">
         <form action="/create_date_night" method="post">
-      <!-- Hidden input for authenticity token to protect from forgery -->
-      <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+          <!-- Hidden input for authenticity token to protect from forgery -->
+          <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
 
-      <!-- Label and input for user_id -->
-      <input type="hidden" name="user_id" value="<%= current_user.id %>">
+          <!-- Label and input for user_id -->
+          <input type="hidden" name="user_id" value="<%= current_user.id %>">
 
-      <!-- Label and input for date_id -->
-      <div class="form-group">
-        <label for="date_id" class="control-label">
-          Date
-        </label>
+          <!-- Label and input for date_id -->
+          <div class="form-group">
+            <label for="date_id" class="control-label">
+              Date
+            </label>
 
-        <%= select_tag(:date_id, options_from_collection_for_select(User.all, :id, :email), :class => "form-control") %>
-      </div>
+            <%= select_tag(:date_id, options_from_collection_for_select(User.all, :id, :email), :class => "form-control") %>
+          </div>
 
-      <!-- Label and input for restaurant_id -->
-      <div class="form-group">
-        <label for="restaurant_id" class="control-label">
-          Restaurant
-        </label>
+          <!-- Label and input for restaurant_id -->
+          <div class="form-group">
+            <label for="restaurant_id" class="control-label">
+              Restaurant
+            </label>
 
-        <%= select_tag(:restaurant_id, options_from_collection_for_select(Restaurant.all, :id, :created_at), :class => "form-control") %>
-      </div>
+            <%= select_tag(:restaurant_id, options_from_collection_for_select(Restaurant.all, :id, :name), :class => "form-control") %>
+          </div>
 
-      <!-- Label and input for activity_id -->
-      <input type="hidden" name="activity_id" value="<%= @activity.id %>">
+          <!-- Label and input for activity_id -->
+          <input type="hidden" name="activity_id" value="<%= @activity.id %>">
 
-      <!-- Label and input for day -->
-      <div class="form-group">
-        <label for="day" class="control-label">
-          Day
-        </label>
+          <!-- Label and input for day -->
+          <div class="form-group">
+            <label for="day" class="control-label">
+              Day
+            </label>
 
-        <input type="text" id="day" name="day" placeholder="Day" class="form-control" value="">
-      </div>
+            <div class='input-group date' id='day'>
+              <input type="hidden" id="day" name="day" placeholder="Day" class="form-control" value="<%= @date_night.day %>">
 
-      <button class="btn btn-block btn-success">
-        Create Date Night
-      </button>
-    </form>
-      </li>
-    </ul>
-  </div>
+            </div>
+          </div>
+
+          <script type="text/javascript">
+          $(function () {
+            $('#day').datetimepicker({
+              inline: true,
+              sideBySide: true
+            });
+          });
+          </script>
+        </div>
+
+        <button class="btn btn-block btn-default">
+          <i class="fa fa-calendar-plus-o" aria-hidden="true"></i> Create Date
+        </button>
+      </form>
+    </li>
+  </ul>
+</div>
 </div>
 
 
 <script src="//maps.google.com/maps/api/js?v=3.24&key=AIzaSyCOTPWiuvyyo6sKoIBzKA4-1ol-vTOIOlM"></script>
 <script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
 <script>
-  handler = Gmaps.build('Google');
-  handler.buildMap({ provider: {}, internal: {id: 'location_map'}}, function(){
-    markers = handler.addMarkers([
-      {
-        "lat": <%= @activity.location_latitude %>,
-        "lng": <%= @activity.location_longitude %>,
-        "infowindow": "<h5><%= @activity.created_at %></h5><small><%= @activity.location_formatted_address %></small>"
-      }
-    ]);
-    handler.bounds.extendWith(markers);
-    handler.fitMapToBounds();
-  });
+handler = Gmaps.build('Google');
+handler.buildMap({ provider: {}, internal: {id: 'location_map'}}, function(){
+  markers = handler.addMarkers([
+    {
+      "lat": <%= @activity.location_latitude %>,
+      "lng": <%= @activity.location_longitude %>,
+      "infowindow": "<h5><%= @activity.created_at %></h5><small><%= @activity.location_formatted_address %></small>"
+    }
+  ]);
+  handler.bounds.extendWith(markers);
+  handler.fitMapToBounds();
+});
 </script>
