--- a/app/views/date_nights/show.html.erb
+++ b/app/views/date_nights/show.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-  <h3>Date Night on <%= @date_night.day.to_formatted_s(:long) %></h3>
+  <h3>Date on <%= @date_night.day.to_formatted_s(:long_ordinal) %></h3>
 </div>
 
 <div class="row">
@@ -47,14 +47,14 @@
     </dl>
 
     <div class="btn-group btn-group-justified">
-      <a href="/date_nights" class="btn btn-primary">
+      <a href="/date_nights" class="btn btn-default">
         <i class="fa fa-undo" aria-hidden="true"></i>
       </a>
       <% if current_user == @date_night.user || @date_night.date %>
-        <a href="/date_nights/<%= @date_night.id %>/edit" class="btn btn-warning">
+        <a href="/date_nights/<%= @date_night.id %>/edit" class="btn btn-default">
           <i class="fa fa-pencil" aria-hidden="true"></i>
         </a>
-        <a href="/delete_date_night/<%= @date_night.id %>" class="btn btn-danger" rel="nofollow">
+        <a href="/delete_date_night/<%= @date_night.id %>" class="btn btn-default" rel="nofollow">
           <i class="fa fa-trash" aria-hidden="true"></i>
         </a>
       <% end %>
