--- a/app/views/activities/edit.html.erb
+++ b/app/views/activities/edit.html.erb
@@ -9,7 +9,7 @@
 <% end %>
 
 <div class="page-header">
-  <h3>Edit Activity #<%= @activity.id %></h3>
+  <h3>Edit <%= @activity.name %></h3>
 </div>
 
 <div class="row">
@@ -36,11 +36,11 @@
         <input type="text" id="location" name="location" placeholder="Location" class="form-control" value="<%= @activity.location %>">
       </div>
 
-      
-      
+
+
 
       <button class="btn btn-warning">
-        Update Activity
+        <i class="fa fa-pencil" aria-hidden="true"></i> Update
       </button>
       or
       <a href="/activities/<%= @activity.id %>">Cancel</a>
