--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -1,14 +1,11 @@
 <div class="page-header">
-  <h3>Activity #<%= @activity.id %></h3>
+  <h3><%= @activity.name %></h3>
 </div>
 
 <div class="row">
   <div class="col-md-12 mb-2">
     <dl class="dl-horizontal">
-      <dt>Name</dt>
-      <dd><%= @activity.name %></dd>
 
-      <dt>Location</dt>
       <dd>
         <div>
           <div id="location_map" style="height: 480px;"></div>
@@ -45,7 +42,7 @@
       </li>
 
       <% @activity.date_nights.each do |date_night| %>
-      <% if current_user == date_night.user || date_night.date %>
+      <% if current_user == date_night.user || current_user == date_night.date %>
       <li class="list-group-item">
         <a href="/date_nights/<%= date_night.id %>">
           <%= date_night.day.to_formatted_s(:short) %>
