--- a/app/views/date_nights/edit.html.erb
+++ b/app/views/date_nights/edit.html.erb
@@ -9,7 +9,7 @@
 <% end %>
 
 <div class="page-header">
-  <h3>Edit Date Night #<%= @date_night.id %></h3>
+  <h3>Edit Date Night on <%= @date_night.day.to_formatted_s(:long_ordinal) %></h3>
 </div>
 
 <div class="row">
@@ -69,7 +69,7 @@
       </script>
 
       <button class="btn btn-warning">
-        Update Date Night
+        <i class="fa fa-pencil" aria-hidden="true"></i> Update
       </button>
       or
       <a href="/date_nights/<%= @date_night.id %>">Cancel</a>
