--- a/app/views/date_nights/show.html.erb
+++ b/app/views/date_nights/show.html.erb
@@ -50,7 +50,7 @@
       <a href="/date_nights" class="btn btn-default">
         <i class="fa fa-undo" aria-hidden="true"></i>
       </a>
-      <% if current_user == @date_night.user || @date_night.date %>
+      <% if current_user == @date_night.user || current_user == @date_night.date %>
         <a href="/date_nights/<%= @date_night.id %>/edit" class="btn btn-default">
           <i class="fa fa-pencil" aria-hidden="true"></i>
         </a>
