--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,6 @@
 <div class="page-header">
   <h1>
     Users
-    <a href="/users/new" class="btn btn-lg btn-success">New User</a>
   </h1>
 </div>
 
@@ -9,20 +8,13 @@
   <div class="col-md-12">
     <table class="table table-striped table-hover">
       <tr>
-        <th>Email</th>
-        <th>Password</th>
         <th>Username</th>
-        <th>Actions</th>
       </tr>
 
       <% @users.each do |user| %>
       <tr>
-        <td><%= user.email %></td>
-        <td><%= user.password %></td>
-        <td><%= user.username %></td>
-        <td>
-          <a href="/users/<%= user.id %>" class="btn btn-primary">Show</a>
-        </td>
+        <td><a href="/users/<%= user.id %>"><%= user.username %></a></td>
+
       </tr>
       <% end %>
     </table>
