mirrored functionalities for restaurant's

--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -103,7 +103,7 @@
         <td>
           <% if activity.contributor.present? %>
             <a href="/users/<%= activity.contributor.id %>">
-              <%= activity.contributor.email %>
+              <%= activity.contributor.username %>
             </a>
           <% end %>
         </td>
