include blanks for date events

--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -104,7 +104,7 @@
               Restaurant
             </label>
 
-            <%= select_tag(:restaurant_id, options_from_collection_for_select(Restaurant.all, :id, :name), :class => "form-control") %>
+            <%= select_tag(:restaurant_id, options_from_collection_for_select(Restaurant.all, :id, :name), :class => "form-control", :include_blank => true) %>
           </div>
 
           <!-- Label and input for activity_id -->
