--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -108,11 +108,11 @@
           <% end %>
         </td>
         <td>
-          <a href="/activities/<%= activity.id %>" class="btn btn-default"><i class="fa fa-eye" aria-hidden="true"></i></a>
+          <a href="/activities/<%= activity.id %>" class="btn btn-primary"><i class="fa fa-eye" aria-hidden="true"></i></a>
 
           <% if current_user == activity.contributor %>
-            <a href="/activities/<%= activity.id %>/edit" class="btn btn-default"><i class="fa fa-pencil" aria-hidden="true"></i></a>
-            <a href="/delete_activity/<%= activity.id %>" class="btn btn-default" rel="nofollow"><i class="fa fa-trash" aria-hidden="true"></i></a>
+            <a href="/activities/<%= activity.id %>/edit" class="btn btn-warning"><i class="fa fa-pencil" aria-hidden="true"></i></a>
+            <a href="/delete_activity/<%= activity.id %>" class="btn btn-danger" rel="nofollow"><i class="fa fa-trash" aria-hidden="true"></i></a>
           <% end %>
         </td>
       </tr>
