--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,8 +14,8 @@
     </dl>
 
     <div class="btn-group btn-group-justified">
-      <a href="/users" class="btn btn-primary">
-        Back
+      <a href="/users" class="btn btn-default">
+        <i class="fa fa-undo" aria-hidden="true"></i> Back
       </a>
     </div>
   </div>
@@ -106,7 +106,7 @@
             <a href="/date_nights/<%= date_night.id %>" class="btn btn-primary">
               <i class="fa fa-eye"></i>
             </a>
-            <%if current_user == date_night.date %>
+            <%if current_user == date_night.date || current_user == date_night.user %>
               <a href="/date_nights/<%= date_night.id %>/edit" class="btn btn-warning">
                 <i class="fa fa-pencil"></i>
               </a>
