aesthetic button choices

--- a/app/views/date_nights/edit.html.erb
+++ b/app/views/date_nights/edit.html.erb
@@ -68,7 +68,7 @@
         });
       </script>
 
-      <button class="btn btn-warning">
+      <button class="btn btn-success">
         <i class="fa fa-pencil" aria-hidden="true"></i> Update
       </button>
       or
