--- a/app/views/date_nights/new.html.erb
+++ b/app/views/date_nights/new.html.erb
@@ -9,7 +9,7 @@
 <% end %>
 
 <div class="page-header">
-  <h3>Add Date Night</h3>
+  <h3>Create a Date</h3>
 </div>
 
 <div class="row">
@@ -69,7 +69,7 @@
       </script>
 
       <button class="btn btn-success">
-        Create Date Night
+        Create Date
       </button>
       or
       <a href="/date_nights">Cancel</a>
