--- a/app/views/activities/edit.html.erb
+++ b/app/views/activities/edit.html.erb
@@ -37,7 +37,7 @@
       </div>
 
 
-      <button class="btn btn-warning">
+      <button class="btn btn-success">
         <i class="fa fa-pencil" aria-hidden="true"></i> Update
       </button>
       or
