--- a/app/views/date_nights/index.html.erb
+++ b/app/views/date_nights/index.html.erb
@@ -40,14 +40,14 @@
           </a>
           <% end %>
         </td>
-        
+
         <td><%= date_night.day.to_formatted_s(:long) %></td>
         <td>
-          <a href="/date_nights/<%= date_night.id %>" class="btn btn-default"><i class="fa fa-eye" aria-hidden="true"></i></a>
+          <a href="/date_nights/<%= date_night.id %>" class="btn btn-primary"><i class="fa fa-eye" aria-hidden="true"></i></a>
 
           <% if current_user == date_night.user || date_night.date %>
-          <a href="/date_nights/<%= date_night.id %>/edit" class="btn btn-default"><i class="fa fa-pencil" aria-hidden="true"></i></a>
-          <a href="/delete_date_night/<%= date_night.id %>" class="btn btn-default" rel="nofollow"><i class="fa fa-trash" aria-hidden="true"></i></a>
+          <a href="/date_nights/<%= date_night.id %>/edit" class="btn btn-warning"><i class="fa fa-pencil" aria-hidden="true"></i></a>
+          <a href="/delete_date_night/<%= date_night.id %>" class="btn btn-danger" rel="nofollow"><i class="fa fa-trash" aria-hidden="true"></i></a>
           <% end %>
         </td>
       </tr>
